...
                contentDescription = stringResource(R.string.favorite_button),
                modifier = modifier
                    .align(Alignment.TopEnd)
                    .padding(16.dp)
                    .clickable { navigateToFavorite() }
                    .semantics(mergeDescendants = true) {
                        contentDescription = "Favorite Icon"
                    }
            )
        }
        SearchBar(
            query = query,
            onQueryChange = onQueryChange,
...
                modifier = Modifier.fillMaxWidth()
            )
        } else {
            LazyColumn(
                state = listState,
                contentPadding = PaddingValues(bottom = 10.dp),
                modifier = modifier.testTag("UserList")
            ) {
                items(favUser, key = {it.id!!}) {data->
                    UserListItem(
                        username = data.username.toString(),
                        avatarUrl = data.avatarUrl.toString(),
                        modifier = modifier
...
